--- a/src/css/Game.css
+++ b/src/css/Game.css
@@ -4,17 +4,8 @@
   margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.example {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+  flex-direction: row;
+  justify-content: start;
 }
