--- a/src/css/Game.css
+++ b/src/css/Game.css
@@ -1,11 +1,47 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
+
 .App {
   height: 100vh;
+  width: 100%;
   text-align: center;
   margin: 0;
+  padding: 0;
+  font-family: "Roboto";
 }
 
 .example {
   display: flex;
   flex-direction: row;
   justify-content: start;
+}
+
+#history-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto, sans-serif";
+}
+
+#board-container {
+  font-family: "Roboto";
+  font-weight: bolder;
+}
+
+#keyboard {
+  font-family: "Roboto";
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  max-width: 100%;
+}
+
+.keyboard-row {
+  display: flex;
+  justify-content: center;
+}
+
+.key {
+  flex-shrink: 3;
 }
